Fixed bugs, added GET-plugs from only POST-method